SB-210 Initial version of History implementation.
